rental-service-jero/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rental-service-jero
  namespace: bicycle-network
  labels:
    app: rental-service-jero
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rental-service-jero
  template:
    metadata:
      labels:
        app: rental-service-jero
    spec:
      containers:
        - name: rental-service-jero
          image: 628786078121.dkr.ecr.us-east-1.amazonaws.com/rental-service-jero:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: "256m"
              memory: "512Mi"
            limits:
              cpu: "512m"
              memory: "1Gi"
